Edited the actionbar items and popup menu as per requirements

--- a/DhairyaModule9/src/main/res/layout/app_bar_main.xml
+++ b/DhairyaModule9/src/main/res/layout/app_bar_main.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/theme_color"
             app:popupTheme="@style/Theme.DhairyaLab9.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
