--- a/DhairyaModule9/src/main/res/navigation/mobile_navigation.xml
+++ b/DhairyaModule9/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="dhairya.pal.n01576099.dp.ui.home.HomeFragment"
+        android:name="dhairya.pal.n01576099.dp.ui.dh1airya.Dh1airya"
         tools:layout="@layout/fragment_home" />
 
     <fragment
