--- a/DhairyaModule9/src/main/res/layout/fragment_dh1airya.xml
+++ b/DhairyaModule9/src/main/res/layout/fragment_dh1airya.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/faintPink"
     tools:context="Dh1airya">
 
     <!--edit text for adding course name-->
