Created fragment 2 according to the requirements and added the Snackbar.

--- a/DhairyaModule9/src/main/res/menu/activity_main_drawer.xml
+++ b/DhairyaModule9/src/main/res/menu/activity_main_drawer.xml
@@ -6,11 +6,11 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_home"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/ic_menu_dh1airya"
+            android:title="Dh1airya" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:icon="@drawable/ic_menu_pa2l"
+            android:title="Pa2l" />
     </group>
 </menu>
