--- a/DhairyaModule9/src/main/res/values/themes.xml
+++ b/DhairyaModule9/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:background">@color/faintPink</item>
     </style>
 
     <style name="Theme.DhairyaLab9.NoActionBar">
