Final commit: fragment 2 more logics.

--- a/DhairyaModule9/src/main/res/layout/fragment_pa2l.xml
+++ b/DhairyaModule9/src/main/res/layout/fragment_pa2l.xml
@@ -97,4 +97,10 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/dhaLinearLayout"
+        android:orientation="vertical" />
+
 </LinearLayout>
